# vulkan-playground

./: .gitignore  CMakeLists.txt  README.md
cmake/: slangHelpers.cmake
libs/filesystem/: filesystem.cpp  filesystem.h
scripts/: compile.sh  compile_shaders.sh
shaders/: main.vert.glsl  main.vert.spv  model.slang  triangle.slang
src/: IWindow.hpp  deviceExtension.hpp  engine.cpp  engine.h  main.cpp  queueFamily.hpp  utilities.hpp  vulkanRenderer.cpp  vulkanRenderer.h  vulkanValidation.hpp  window.cpp
src/config/: config.hpp
src/core/: IWindow.hpp  baseWindow.hpp  engine.cpp  engine.h  window.cpp  window.h
src/io/: filesystem.cpp  filesystem.h
src/renderer/: swapchain.hpp  vulkanRenderer.cpp  vulkanRenderer.h
src/rendering/: buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  deviceExtension.hpp  format.hpp  image.cpp  image.h  memory.cpp  memory.h  memory.hpp  pipelineBuilder.cpp  pipelineBuilder.h  renderer.cpp  renderer.h  sample.hpp  shader.cpp  shader.h  swapchain.cpp  swapchain.h  validation.hpp
src/rendering/mesh/: vertex.hpp
vkREngine/: IWindow.hpp  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp  utilities.hpp  vulkanRenderer.cpp  vulkanRenderer.h  vulkanValidation.hpp  window.cpp  window.h
vkREngine.xcodeproj/: project.pbxproj
vkREngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
vkREngine.xcodeproj/project.xcworkspace/xcuserdata/msamigurpinar.xcuserdatad/: UserInterfaceState.xcuserstate
vkREngine.xcodeproj/xcshareddata/xcschemes/: VulkanTest.xcscheme
vkREngine.xcodeproj/xcuserdata/msamigurpinar.xcuserdatad/xcschemes/: xcschememanagement.plist
