cmake_minimum_required(VERSION 3.23)
project(abra CXX C)

set(CMAKE_CXX_STANDARD 20)

if (APPLE)
    add_compile_options(-gdwarf-4)
    add_definitions(-DVK_ENABLE_BETA_EXTENSIONS)
endif ()

find_package(glfw3 3.2 REQUIRED)
find_package(Vulkan REQUIRED)
find_program(SLANGC_EXECUTABLE slangc REQUIRED)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/slangHelpers.cmake)

file(GLOB_RECURSE SRC "src/*")

set(COMPILATION_UNIT ${SRC})

add_executable(${PROJECT_NAME} ${COMPILATION_UNIT})
target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan)

add_slang_shader_target(MainShaderTarget SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/shaders/main.slang")
add_dependencies(${PROJECT_NAME} MainShaderTarget)

target_compile_definitions(${PROJECT_NAME} PRIVATE
        SHADER_BINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}/shaders/"
)
