cmake_minimum_required(VERSION 3.23)
project(abra CXX C)

set(CMAKE_CXX_STANDARD 20)

if (APPLE)
    add_compile_options(-gdwarf-4)
    add_definitions(-DVK_ENABLE_BETA_EXTENSIONS)
endif ()

find_package(glfw3 3.2 REQUIRED)
find_package(Vulkan REQUIRED)
find_program(SLANGC_EXECUTABLE slangc REQUIRED)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/slangHelpers.cmake)

file(GLOB_RECURSE SRC "src/*")

set(LIBS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/libs)

set(STB_IMAGE
        ${CMAKE_CURRENT_SOURCE_DIR}/libs/image/stb_image.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/libs/image/stb_image.h)

set(TINY_OBJ_LOADER
        ${CMAKE_CURRENT_SOURCE_DIR}/libs/obj/tiny_obj_loader.cc
        ${CMAKE_CURRENT_SOURCE_DIR}/libs/obj/tiny_obj_loader.h)

set(COMPILATION_UNIT ${SRC} ${STB_IMAGE} ${TINY_OBJ_LOADER})

add_executable(${PROJECT_NAME} ${COMPILATION_UNIT})

target_include_directories(${PROJECT_NAME} PUBLIC
        ${LIBS_INCLUDE_DIRS}
        ${GLM_INCLUDE_DIRS})

target_link_libraries(${PROJECT_NAME} PRIVATE glfw Vulkan::Vulkan)

add_slang_shader_target(TriangleShaderTarget
        SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/shaders/model.slang"
        OUTPUT_NAME "model.spv")
add_dependencies(${PROJECT_NAME} TriangleShaderTarget)

target_compile_definitions(${PROJECT_NAME} PRIVATE
        SHADER_BINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}/shaders/"
)
